midnight.css
/* base color variables */
.theme-dark {
    --accent-color: hsl(190, 60%, 50%); /* main accent color */
    --accent-color-2: hsl(190, 60%, 55%); /* color of accent color buttons on hover */
    --accent-color-3: hsl(190, 60%, 40%); /* color of accent color buttons on click */
    --link-color: hsl(190, 90%, 50%); /* link color */

    --mention-background: hsl(190, 60%, 50%, 0.3); /* user mention background */
    --mentioned-background: hsla(190, 60%, 50%, 0.1); /* background of messages that mention you */
    --mentioned-hover-background: hsla(190, 60%, 50%, 0.08); /* background of messages that mention you on hover */

    --primary-text: hsl(220, 15%, 60%); /* main text color (messages, titles, unread text/indicators) */
    --secondary-text: hsl(220, 15%, 40%); /* secondary text color (channels, descriptions, buttons) */
    --muted-text: hsl(220, 15%, 20%); /* muted text color (input box placeholders, muted channels, message times) */

    --primary-background: hsl(220, 15%, 10%); /* main chat/channel list/member list background */
    --secondary-background: hsl(220, 15%, 13%); /* background of pretty much everything else */
    --scrollbar-color: hsl(220, 15%, 11%); /* scrollbar thumb color */

    --hover-modifier: hsla(220, 15%, 20%, .1); /* color of things on hover */
    --active-modifier: hsla(220, 15%, 20%, .2); /* color of things when clicked */
    --selected-modifier: hsla(220, 15%, 20%, .3); /* color of things when selected */
}
 
/* change colors */
.theme-dark {
    --brand-experiment: var(--accent-color);

    --header-primary: var(--primary-text);
    --header-secondary: var(--secondary-text);
    --text-normal: var(--primary-text);
    --text-muted: var(--muted-text);
    --text-link: var(--link-color);
    --text-link-low-saturation: var(--link-color);
    --interactive-normal: var(--secondary-text);
    --interactive-hover: var(--primary-text);
    --interactive-active: var(--primary-text);
    --interactive-muted: var(--muted-text);
    --background-primary: var(--primary-background);
    --background-secondary: var(--secondary-background);
    --background-secondary-alt: var(--secondary-background);
    --background-tertiary: var(--secondary-background);
    --background-accent: var(--muted-text);
    --background-floating: var(--primary-background);
    --background-mobile-primary: var(--primary-background);
    --background-mobile-secondary: var(--secondary-background);
    --background-modifier-hover: var(--hover-modifier);
    --background-modifier-active: var(--active-modifier);
    --background-modifier-selected: var(--selected-modifier);
    --background-modifier-accent: var(--selected-modifier);
    --scrollbar-thin-thumb: var(--scrollbar-color);
    --scrollbar-thin-track: transparent;
    --scrollbar-auto-thumb: var(--scrollbar-color);
    --scrollbar-auto-track: transparent;
    --scrollbar-auto-scrollbar-color-thumb: var(--scrollbar-color);
    --scrollbar-auto-scrollbar-color-track: transparent;
    --elevation-stroke: 0 0 4px 1px hsla(0, 0%, 0%, 0.15);
    --elevation-low: none;
    --elevation-medium: 0 4px 8px hsla(0, 0%, 0%, 0.2);
    --elevation-high: 0 4px 8px hsla(0, 0%, 0%, 0.3);
    --guild-header-text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
    --background-mentioned: var(--mentioned-background);
    --background-mentioned-hover: var(--mentioned-hover-background);
    --background-message-hover: var(--hover-modifier);
    --channels-default: var(--secondary-text);
    --channeltextarea-background: var(--secondary-background);
    --activity-card-background: var(--secondary-background);
    --textbox-markdown-syntax: var(--secondary-text);
    --info-warning-foreground: var(--accent-color);
    --brand-experiment-30a: var(--mention-background);
    --brand-experiment-600: var(--accent-color-3);
    --brand-experiment-560: var(--accent-color-2);
    --brand-experiment-360: var(--accent-color);

    --SC-spotify-green: var(--accent-color);
}

/* force elements to use colors variables */
.peopleColumn-29fq28,
.uploadModal-2ifh8j,
.pageWrapper-1PgVDX,
.message-2qRu38,
.root-1gCeng,
.container-3ayLPN,
.autocomplete-1vrmpx,
.categoryHeader-O1zU94 {
    background-color: var(--background-primary) !important;
}

.selected-1Tbx07,
.selected-rZcOL- {
    background-color: var(--background-modifier-selected) !important;
}

.lookFilled-1Gx00P.colorGrey-2DXtkV {
    background-color: var(--background-accent) !important;
}

.focused-2bY0OD {
    background-color: var(--background-tertiary) !important;
}

.queryContainer-RKFJW- {
    color: var(--text-normal) !important;
    border-bottom: none !important;
}

.dim-1l4L4y span {
    background-color: var(--text-muted) !important;
    color: var(--header-secondary) !important;
    border: none;
}

.option-96V44q .filter-3Y_im-,
.searchOption-zQ-1l6 .answer-1n6g43 {
    color: var(--header-secondary) !important;
}

.header-2N-gMV, 
.plusIcon-v0BTrL, 
.searchClearHistory-2cSSMO, 
.searchLearnMore-3SQUAj a {
    color: var(--header-primary) !important;
}

.option-96V44q .answer-1n6g43, 
.option-96V44q .nonText-3CRkO0, 
.theme-dark .option-96V44q strong {
    color: var(--text-normal) !important;
}

.divider-JfaTT5 {
    --divider-color: var(--brand-experiment) !important;
}

.circleIconButton-1XqULR {
    color: var(--brand-experiment);
}

.circleIconButton-1XqULR.selected-2jcQaY {
    background-color: var(--brand-experiment);
}

.containerDragAfter-3Fp7LC:after, 
.containerDragBefore-3iTCc7:before,
.target-3LqNfV.dragOver-Iim8_W:before {
    background-color: var(--brand-experiment);
}

/* folder colors */
.expandedFolderIconWrapper-3fmTfW svg {
    color: var(--brand-experiment) !important;
}

.folderIconWrapper-1Ml_1q,
.expandedFolderBackground-3ZDF05 {
    background-color: var(--background-primary) !important;
}

/* adjust colors for chat and sidebars */
.sidebarRegionScroller-3MXcoP,
.scroller-1JbKMe,
.privateChannels-1nO12o,
.panels-j1Uci_,
.sidebar-2K8pFh,
.container-3w7J-x,
.members-1998pB, 
.members-1998pB > div {
    background: var(--background-primary) !important;
}

.footer-3mqk7D,
.footer-2gL1pp {
    background-color: var(--background-secondary) !important;
}


/* remove weird shadow on search suggestions */
.option-96V44q:after {
    background: none !important;
}

/* fix activity cards */
.itemCard-v9viV7 {
    border: none;
}

.outer-1AjyKL.active-1xchHY, 
.outer-1AjyKL.interactive-3B9GmY:hover {
    background-color: var(--background-modifier-hover) !important;
}


/* add rounded borders */
.callContainer-36WRfH,
.notice-3bPHh-,
.threadSidebar-1o3BTy,
.container-1D34oG,
.container-1a3EgQ,
.applicationStore-1pNvnv,
.sidebar-2K8pFh,
.pageWrapper-1PgVDX {
    border-radius: 10px !important;
}

/* add margins around edges */
.container-1D34oG,
.container-1a3EgQ,
.applicationStore-1pNvnv,
.chat-3bRxxu,
.pageWrapper-1PgVDX {
    margin: 10px;
}

.threadSidebar-1o3BTy { 
    margin: 10px 10px 10px 0px;
}

.notice-3bPHh- {
    margin: 10px 10px 0px 0px;
}

.notice-3bPHh-.noticeWrapper-8z511t {
    margin: 20px 10px 0px 10px;
}

.sidebar-2K8pFh {
    margin: 10px 0px 10px 0px;
}

.wrapper-3NnKdC {
    margin: 10px 0px 0px 0px;
}

/* remove chat background */
.chat-3bRxxu {
    background: none !important;
}

/* remove title bar background */
.title-3qD0b- {
    background: none !important;
    width: auto;
}

/* add chat background and make rounded */
.chatContent-a9vAAp {
    background: var(--background-primary) !important;
    border-radius: 0px 0px 10px 10px;
}

/* add background to title bar and make rounded */
.chatContent-a9vAAp::before {
    content: "";
    position: relative;
    margin-top: -48px;
    background: var(--background-primary);
    width: 100%;
    height: 48px;
    border-radius: 10px 10px 0px 0px;
}

/* put thread join/archive banner on top */
.chatHeaderBar-4vZS1x {
    z-index: 1;
}

/* put toolbar on top */
.toolbar-1t6TWx {
    position: relative;
    z-index: 1;
    margin-left: 8px;
}

.iconWrapper-2OrFZ1[aria-label="Threads"] {
    width: 36.1px;
}

.iconWrapper-2OrFZ1[aria-label="Threads"] .icon-22AiRD {
    margin-left: auto;
}

/* hide toolbar icons */
.iconWrapper-2OrFZ1[aria-label="Help"] {
    display: none;
}

.iconWrapper-2OrFZ1[aria-label*="Member List"] {
    order: 1;
}

/* position search */
.search-36MZv- {
    order: 1;
    margin-left: 36px;
    margin-right: 8px;
}

.searchBar-3dMhjb {
    width: 208px !important;
    padding: 0px 2px;
}

/* position members list and add margins/rounded */
.membersWrap-2h-GB4 {
    position: relative;
    margin-top: -48px;
}

.members-1998pB {
    border-radius: 10px !important;
    margin: 0px 0px 0px 10px;
}

/* create space for search bar */
.members-1998pB div h2:first-of-type {
    margin-top: 30px;
}

/* add search bar background */
.members-1998pB::before {
    z-index: 1;
    content: "";
    position: fixed;
    background-color: var(--background-primary);
    width: 240px;
    height: 48px;
    border-radius: 10px 10px 0px 0px;
}


/* fix search results */
.searchResultsWrap-3-pOjs {
    width: 470px;
    margin-left: 10px;
    background-color: var(--background-primary);
}

.searchResultsWrap-3-pOjs::before {
    margin-top: -48px;
    z-index: 1;
    content: "";
    position: fixed;
    background-color: var(--background-primary);
    width: 470px;
    height: 48px;
    border-radius: 10px 10px 0px 0px;
}

.searchHeader-2XoQg7 {
    background-color: var(--background-primary);
}

.channelName-1JRO3C {
    background: none;
}

.message-1Ng5AR {
    background-color: var(--background-tertiary);
}

/* only show scrollbar when hover */
.scrollerBase-289Jih:hover::-webkit-scrollbar-thumb {
    visibility: visible;
}

.scrollerBase-289Jih::-webkit-scrollbar-thumb {
    visibility: hidden;
}


/* position window controls bar */
.typeWindows-1za-n7 {
    position: absolute;
    height: 20px;
    width: 100%;
    margin: 0;
    background: none;
}

/* fix padding */
.typeWindows-1za-n7 + .app-1q1i1E .container-2lgZY8 {
    padding-top: 10px;
}

.typeWindows-1za-n7 + .app-1q1i1E .notice-3bPHh-.noticeWrapper-8z511t + .layers-3iHuyZ .container-2lgZY8 {
    padding-top: 0px;
}

.scroller-1Bvpku {
    padding: 0;
}

.wordmarkWindows-1v0lYD {
    padding: 2px 9px;
}

/* create window control buttons */
.typeWindows-1za-n7 .winButton-iRh8-Z > svg {
    display: none;
}

.typeWindows-1za-n7 .winButton-iRh8-Z {
    background: none;
    top: 0;
    width: 12px;
    height: 12px;
    margin: 4px 12px 0px 0px;
}

.typeWindows-1za-n7 .winButton-iRh8-Z:nth-child(2) {
    margin-right: 12px;
}

.typeWindows-1za-n7 .winButton-iRh8-Z::after {
    content: "";
    height: 12px;
    width: 12px;
    border-radius: 12px;
    transition: 0.1s;
}

.typeWindows-1za-n7 .winButtonClose-1HsbF-::after {
    background-color: hsl(0, 50%, 50%) !important;
}

.typeWindows-1za-n7 .winButtonMinMax-PBQ2gm:nth-child(3)::after {
    background-color: hsl(120, 50%, 50%) !important;
}

.typeWindows-1za-n7 .winButtonMinMax-PBQ2gm:nth-child(4)::after {
    background-color: hsl(50, 50%, 50%) !important;
}

.typeWindows-1za-n7 > div:hover::after {
    transform: scale(1.1);
}

/* blur spoiler text */
.spoilerText-3p6IlD,
.spoilerText-3p6IlD.hidden-HHr2R9 {
    background-color: transparent !important;
}

.spoilerText-3p6IlD.hidden-HHr2R9 > .inlineContent-3ZjPuv {
    opacity: 1 !important;
    filter: blur(5px);
    pointer-events: unset;
}

/* other */

